--- a/src/templates/persistent-damage-dialog.html
+++ b/src/templates/persistent-damage-dialog.html
@@ -13,10 +13,14 @@
 
     <!------ Persistent Damage Section ------->
     <div class="damage-entry">
-        <div class='form-group'>
+        <div class="form-group">
             <!------ Persistent Damage values ------->
-            <label>Damage:</label>
-            <div class='form-fields'><input type="text" name="Damage" placeholder="1d4"/></div>
+            <div class="form-fields persistent-damage-values">
+                <label>Damage:</label>
+                <input type="text" name="Damage" placeholder="Formula"/>
+                <label>DC</label>
+                <input type="number" name="DC" placeholder="15"/>
+            </div>
         </div>
     </div>
 </form>
