--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -110,32 +110,50 @@
     }
 }
 
-.pf2e-pd-card header.card-header {
-	position: relative;
-    padding: 3px 0;
-    border-top: 2px groove #FFF;
-    border-bottom: 2px groove #FFF;
-}
-
-.pf2e-pd-card header.card-header img {
-	flex: 0 0 36px;
-	margin-right: 5px;
-}
-
-.pf2e-pd-card header.card-header h3 {
-    flex: 1;
-    margin: 0;
-    line-height: 36px;
-    font-family: "Modesto Condensed", "Palatino Linotype", serif;
-    font-size: 20px;
-    font-weight: 700;
-    color: #4b4a44;
-}
-
 .pf2e-pd-card {
+    header.card-header {
+        position: relative;
+        padding: 3px 0;
+        border-top: 2px groove #FFF;
+        border-bottom: 2px groove #FFF;
+    }
+
+    header.card-header img {
+        flex: 0 0 36px;
+        margin-right: 5px;
+    }
+
+    header.card-header h3 {
+        flex: 1;
+        margin: 0;
+        line-height: 36px;
+        font-family: "Modesto Condensed", "Palatino Linotype", serif;
+        font-size: 20px;
+        font-weight: 700;
+        color: #4b4a44;
+    }
+
     header.card-header h3:hover {
         color: #111;
         text-shadow: 0 0 10px red;
+    }
+
+    button.token-link {
+        left: auto;
+        justify-content: right;
+        width: 32px;
+        height: 32px;
+        font-size: 14px;
+        i {
+            margin: 0;
+        }
+    }
+
+    .card-content {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .flat-check-success {
