feat: add more damage types

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,6 @@
 #pf2e-persistent-dialog {
+    width: 450px!important;
+
     header {
         border-radius: 0;
         background: linear-gradient(90deg, var(--secondary) 0%, #202b93 50%, var(--secondary) 100%);
