--- a/src/templates/card-header.html
+++ b/src/templates/card-header.html
@@ -12,7 +12,7 @@
             </p>
         </div>
         <div class="side-buttons">
-            <button class="token-link" data-token-id="{{token.id}}" title="{{ localize 'PF2E-PD.Button.SelectTarget' }}">
+            <button class="token-link" data-token-id="{{token.id}}" title="{{ localize 'PF2E-PD.Button.SelectTarget' }}" data-visibility="owner">
                 <i class="fa fa-crosshairs"></i>
             </button>
         </div>
