--- a/src/templates/chat/persistent-card.html
+++ b/src/templates/chat/persistent-card.html
@@ -1,15 +1,17 @@
-<div class="pf2e-pd-card">
+<div class="pf2e chat-card pf2e-pd-card" data-actor-id="{{actor._id}}" data-effect-id="{{effect.id}}" {{#if tokenId}}data-token-id="{{tokenId}}"{{/if}}>
     <div class="card-content">
         <div>
-            <p>Persistent {{typeName}} damage</p>
-            <p>
+            <div>Persistent {{typeName}} damage</div>
+            {{#if autoCheck}}
+            <div>
                 DC {{data.dc}} {{{inlineCheck}}} -
                 {{#if success}}
                     <span class="flat-check-success">Success</span>
                 {{else}}
                     <span class="flat-check-failure">Failure</span>
                 {{/if}}
-            </p>
+            </div>
+            {{/if}}
         </div>
         <div class="side-buttons">
             <button class="token-link" data-token-id="{{token.id}}" title="{{ localize 'PF2E-PD.Button.SelectTarget' }}" data-visibility="owner">
@@ -17,4 +19,9 @@
             </button>
         </div>
     </div>
+    {{#unless autoCheck}}
+        <div class="card-buttons">
+            <button data-action="check" data-check="flat" data-dc="{{data.dc}}">Recovery Check DC {{data.dc}}</button>
+        </div>
+    {{/unless}}
 </div>
