--- a/src/templates/chat/persistent-card.html
+++ b/src/templates/chat/persistent-card.html
@@ -21,7 +21,7 @@
     </div>
     {{#unless autoCheck}}
         <div class="card-buttons">
-            <button data-action="check" data-check="flat" data-dc="{{data.dc}}">Recovery Check DC {{data.dc}}</button>
+            <button data-action="check" data-check="flat" data-dc="{{data.dc}}" data-visibility="owner">Recovery Check DC {{data.dc}}</button>
         </div>
     {{/unless}}
 </div>
