--- a/src/templates/persistent-damage-dialog.html
+++ b/src/templates/persistent-damage-dialog.html
@@ -5,7 +5,7 @@
             {{#each types}}
                 <div>
                     <input type="radio" name="Type" id="{{this.damageType}}" value="{{this.damageType}}">
-                    <label for="{{this.damageType}}"><img src="{{this.img}}">{{this.name}}</label>
+                    <label for="{{this.damageType}}"><img src="{{this.img}}">{{localize this.name}}</label>
                 </div>
             {{/each}}
         </div>
