--- a/src/templates/chat/persistent-card.html
+++ b/src/templates/chat/persistent-card.html
@@ -1,5 +1,5 @@
 <div class="pf2e chat-card pf2e-pd-card" data-actor-id="{{actor._id}}" data-effect-id="{{effect.id}}" {{#if tokenId}}data-token-id="{{tokenId}}"{{/if}}>
-    <div class="card-content">
+    <div class="persistent-header">
         <div>
             <div>Persistent {{typeName}} damage</div>
             {{#if autoCheck}}
