--- a/src/templates/chat/recover-persistent-card.html
+++ b/src/templates/chat/recover-persistent-card.html
@@ -1,10 +1,10 @@
 <div class="pf2e-pd-card">
     <strong>Recovery Check: Persistent {{typeName}} DC{{data.dc}}</strong>
-    <div>
+    <div class="result degree-of-success">
     {{#if success}}
-        <span class="flat-check-success">Success</span>
+        <span class="flat-check-success success">Success</span>
     {{else}}
-        <span class="flat-check-failure">Failure</span>
+        <span class="flat-check-failure failure">Failure</span>
     {{/if}}
     </div>
 </div>
